Version 2.1.0-RC3-DEVEL (May 9, 2019)
-------------------------------------
! Fixed (dynamic) host multi IP handling in plugins
* Default FRAG_DROP to off
* Tweaks in the job manager process

Version 2.1.0-RC2 (February 13, 2019)
-------------------------------------
! ipt_if() expansion didn't work as it should
* Improve copy/overwrite logic in install.sh
* Tweak job manager start/stop logic

Version 2.1.0-RC1 (February 10, 2019)
-------------------------------------
! The install and configure scripts didn't work properly on systems without an /etc/init.d directory (eg. Arch Linux)
! Error handling in the plugin helpers was broken
* Workaround non-working + interface wildcard in nftables's iptables binary
* It's useless to reset the counters when we've just flushed all chains
- Get rid of the BAD_TCP_FLAGS setting, which in fact always was a "bad tcp options" setting. This also fixes
  problems with nftables's iptables emulation
! aif-job-processor lock was not removed when jobs file became empty
* Change FRAG_LOG option to FRAG_DROP to allow disabling fragment dropping (eg. for broken nftables)
* Backport systemd updates/improvements from Debian (thanks Sven Geuer)

Version 2.1.0-BETA1 (June 29, 2018)
-----------------------------------
* Move dynamic host handling (no longer via DynDNS-host-open plugin but handled internally)
+ Capability for hostnames resolving to multiple IPs in dynamic host support
+ New job manager to accommodate improved (plugin) helper support (replaces cron jobs)
* Move duplicate code from some of the plugins to environment (like locking for instance)
* Various other tweaks/refactoring

Version 2.0.3 (June 28, 2018)
-----------------------------
! Missing mention in man page of arno-fwfilter's --no-resolve option
! Various fixes in the installer
* Improvements in the parasitic net plugin
* Various tweaks

Version 2.0.2a (October 26, 2017)
---------------------------------
! Fixed log line being too long (>28 chars)